# combi

./: .gitignore  Cargo.toml  README.md  todo.txt
manual/: bb_3_breaker.gph  bb_3_breaker2.gph  bb_breaker.gph  bb_breaker2.gph  bgw7.gph  bgw9.gph  bgw_semifree.gph  bib_non_ic.gph  big_chi_cg.gph  bireg  bowtie.gph  chi_g_edge_minus.gph  chi_g_edge_plus.gph  coronaless_grabby.gph  counter_reed.gph  counter_reed_extended.gph  counter_reed_plus.gph  counter_reed_reduced.gph  cubic_24.gph  cubic_bip.gph  dom_bug.gph  dom_bug_small.gph  dom_bug_small.gph~  fork.gph  full_reed.gph  full_reed_counter.gph  gray.gph  hex_reg_40.gph  mark_c_hi.gph  mark_c_lo.gph  non_monot.gph  prism.gph  reed8.gph  reed_test.gph  rled_40.gph  sand_timer.gph  tendril_triangle.gph  test_1.gph  test_3.gph  tmp.gph  (+2 more)
manual/bb/: 3.gph  breaker.gph  contra.gph  gadget.gph  suspect.gph
manual/cubic/: 18.gph  8.gph
manual/digraph/: tmp.dig
manual/grabby/: bgw9.gph
manual/poset/: 3bal.pst  3bal_ext.pst  balanced_ladder.pst  tmp1.pst  tmp2.pst
manual/reed/: counter_reed.gph  reed_test.gph
manual/test/: test_2.gph
manual/tmp/: tmp.gph
src/: annotations.rs  constructor.rs  controller.rs  digraph.rs  dossier.rs  entity.rs  graph.rs  instruction.rs  main.rs  operation.rs  operator.rs  pattern.rs  poset.rs
src/constructor/: bowties.rs  corona.rs  erdos_renyi.rs  from_file.rs  grid.rs  products.rs  random_bfs.rs  random_digraphs.rs  random_planar.rs  random_posets.rs  random_regular_bipartite.rs  raw.rs  regular.rs  semiregular.rs  strucutral.rs  tree.rs
utilities/: Cargo.toml
(+126 files in other folders)
