[package]
name = "combi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
queues = "1.0.2"
regex = "1.4.5"
strum = { version = "0.21", features = ["derive"] }
utilities = { path = "utilities" }